// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indent.js - {"useTabs":true,"tabWidth":8} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
tabWidth: 8
useTabs: true
                                                                                | printWidth
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
	a;
}}
 	\${() => {
		a;
	}}
  	\${() => {
		a;
	}}
   	\${() => {
		a;
	}}
    	\${() => {
		a;
	}}
     	\${() => {
		a;
	}}
      	\${() => {
		a;
	}}
       	\${() => {
		a;
	}}
        	\${() => {
			a;
		}}

Tabs:
	\${() => {
		a;
	}}
		\${() => {
			a;
		}}
\`;

================================================================================
`;

exports[`indent.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
  a;
}}
 	\${() => {
    a;
  }}
  	\${() => {
      a;
    }}
   	\${() => {
      a;
    }}
    	\${() => {
        a;
      }}
     	\${() => {
        a;
      }}
      	\${() => {
          a;
        }}
       	\${() => {
          a;
        }}
        	\${() => {
            a;
          }}

Tabs:
	\${() => {
    a;
  }}
		\${() => {
      a;
    }}
\`;

================================================================================
`;
